--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,13 @@ rasa-core-sdk==0.11.0
 spacy
 keras
 numpy
+pandas
+cv2
+opencv
+scipy
+argparse
+collections
+scikit-learn
 h5py
 pillow
 tensorflow
