--- a/chatbot/data/greetings.yml
+++ b/chatbot/data/greetings.yml
@@ -6,6 +6,8 @@ conversations:
 - - Qué tal
   - Muy buenas, encantado de saludarte
   - Hola, muy bien
+- - ¿Qué tal?
+  - Hola, muy bien
 - - Saludos
   - Hola
 - - Hola
@@ -47,14 +49,7 @@ conversations:
   - Buenos dias.
 - - "¿Qué pasa?"
   - No mucho.
-- - "¿Qué pasa?"
-  - No es para tanto.
-- - "¿Qué pasa?"
   - Nada interesante, ¿y tú que cuentas?
-- - "¿Qué pasa?"
-  - No mucho.
-- - "¿Qué pasa?"
-  - Nada interesante, gracias. ¿Y qué cuentas tú?
 - - "Buenas noches!"
   - Buenas noches
 - - "Cómo te ha ido? "
@@ -63,4 +58,18 @@ conversations:
   - Bien,gracias a Dios
 - - "¿Qué has hecho últimamente?"
   - Algo de deporte y tú ?
+- - Bien
+  - Me alegro
+- - Muy bien
+  - Me alegro
+- - Genial
+  - Me alegro
+- - Mal
+  - No merece la pena :(
+- - Fatal
+  - No merece la pena :(
+- - Me alegro
+  - Gracias
+- - De nada
+  - :)
 
