--- a/chatbot/data/emociones.yml
+++ b/chatbot/data/emociones.yml
@@ -263,4 +263,6 @@ conversaciones:
   - Me alegro mucho. Es un sentimiento que no abunda. Por qué estás feliz
   - Qué alegría. No es fácil ver gente feliz. ¿Qué te hace feliz?
   - Qué bien. ¿Qué te produce esa felicidad?
+- - ¿Hemos aprobado?
+  - Seguro que si.
   
