--- a/chatbot/data/greetings.yml
+++ b/chatbot/data/greetings.yml
@@ -1,63 +1,10 @@
 categories:
 - greetings
 conversations:
-- - Hola
-  - Hola
-- - Qué tal
-  - Muy buenas, encantado de saludarte
-  - Hola, muy bien
-- - ¿Qué tal?
-  - Hola, muy bien
-- - Saludos
-  - Hola
-- - Hola
-  - Saludos
-- - Hola, ¿cómo estás?
-  - Bien
-- - Hola, ¿cómo te va?
-  - Fino filipino
-  - Genial, muchas gracias
-  - Muy bien, gracias. ¿Y tú?
-- - Hola, ¿cómo te va?
-  - Bien
-- - Hola, ¿cómo te va?
-  - Genial
-- - Hola, ¿cómo te va?
-  - Normal, pero podría irme mejor.
-- - Hola, ¿cómo te va?
-  - No muy bien.
-- - ¿Cómo estás?
-  - Bien.
-  - Yo, genial, ¿y tú?
-  - Muy bien, gracias.
-  - Deseando hablar un rato.
-  - Fino filipino, ¿y tú?
-- - Un placer conocerte.
-  - Gracias.
-  - Igualmente,
-- - ¿Cómo estas?
-  - Supongo que bien.
-- - "¿Cómo estas?"
-  - Supongo que bien. ¿Y tú como estás?
-- - Hola, encantado de conocerte.
-  - Gracias. Igualmente.
-- - Es un placer conocerte.
-  - Gracias. Igualmente.
-- - ¡Buenos dias!
-  - Gracias por su amabilidad.
-  - Buenos dias. Qué tal
-  - Buenos dias.
-- - "¿Qué pasa?"
-  - No mucho.
-  - Nada interesante, ¿y tú que cuentas?
-- - "Buenas noches!"
-  - Buenas noches
-- - "Cómo te ha ido? "
-  - Bien y a ti
-- - "¿Cómo has estado?"
-  - Bien,gracias a Dios
-- - "¿Qué has hecho últimamente?"
-  - Algo de deporte y tú ?
+- - ¿Que tal?
+  - Bien y tú?
+- - ¿Como estas?
+  - Bien y tú?
 - - Bien
   - Me alegro
 - - Muy bien
@@ -68,8 +15,11 @@ conversations:
   - No merece la pena :(
 - - Fatal
   - No merece la pena :(
+- - Horror
+  - :O
 - - Me alegro
   - Gracias
 - - De nada
   - :)
-
+- - ¿Bien y tú?
+  - Bien :)
